--- a/css/style.css
+++ b/css/style.css
@@ -22,18 +22,20 @@
 .main-header nav li {
     display: inline-block;
     margin: 0 10px;
+    font-size: 30px;
+    line-height: 30px;
+    height: 30px;
+    width: 30px;
+    background-color: white;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding: 1px;
+    border-radius: 50%;
 }
 
 .main-header nav li a {
-    display: inline-block;
-    height: 20px;
-    width: 20px;
-    background-color: white;
-    padding: 5px;
-    border-radius: 50%;
     text-decoration: none;
+    color: black;
 }
-
 
 /* Debug */
 header.debug {
