--- a/css/style.css
+++ b/css/style.css
@@ -40,9 +40,49 @@
 }
 
 /* Corpo della pagina */
-.box {
+main .box {
     width: 100%;
     height: 100vh;
+    position: relative;
+    z-index: -20;
+}
+
+main .box h2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 30vh);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 50px;
+}
+
+main .box h2.yellow {
+    color: yellow;
+}
+
+main .box h2.green {
+    color: green;
+}
+
+main .box#scarpa1 {
+    background-color: red;
+    background-image: url(../img/01.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+main .box#scarpa2 {
+    background-color: green;
+    background-image: url(../img/02.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+main .box#scarpa3 {
+    background-color: yellow;
+    background-image: url(../img/03.png);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 /* Debug */
@@ -54,7 +94,7 @@
     background-color: teal;
 } */
 
-.debug .box {
+/* .debug .box {
     background-color: firebrick;
     border: 2px dashed black;
-}
+} */
