--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ main .box h2.yellow {
 }
 
 main .box h2.green {
-    color: green;
+    color: greenyellow;
 }
 
 main .box#scarpa1 {
@@ -88,6 +88,12 @@ main .box#scarpa3 {
 main section[id^="scarpa"].box h2 {
     text-transform: uppercase;
     text-align: center;
+}
+
+main section[id^="scarpa"].box .layover {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height: 100%;
 }
 
 /* Debug */
